src/components/ChatBox.css
.chatbox {
	display: flex;
	flex-direction: column;
	height: 100%;
	overflow: hidden;
	background: rgba(255, 255, 255, 0.9);
	border-top: 2px solid #444;
	font-family: monospace;
	display: flex;
	flex-direction: column;
}

.chat-log {
	display: flex;
	flex-direction: column-reverse;
	flex: 1;
	background-color: pink;
	overflow-y: auto;
	font-size: 0.9rem;
	padding: 0.5rem;
}

.chat-input {
	width: 95%;
	font-size: 1rem;
	padding: 0.3rem;
	margin: 0.3rem auto;
}

.chat-message {
	line-height: 1.5rem;
}

